@@ -1,3 +1,5 @@
+	* Update test_city.py and test_region.py ( Boris Zentner )
+	* Add region_name to GeoIPRegion ( Boris Zentner )
 	* Add database_info and database_edition attributes to GeoIP object
 		(James Henstridge)
 	* Add region_name and time_zone keys to GeoIPRecord wrapper (James
